--- a/SavegameAutoBackupAgent/GameRecord.xaml
+++ b/SavegameAutoBackupAgent/GameRecord.xaml
@@ -1,9 +1,8 @@
-﻿<UserControl x:Class="SavegameAutoBackupAgent.GameRecord"
+﻿<UserControl x:Class="SaveScumAgent.GameRecord"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SavegameAutoBackupAgent"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:Controls ="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:wpf="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
         FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto">
