--- a/SavegameAutoBackupAgent/MainWindow.xaml
+++ b/SavegameAutoBackupAgent/MainWindow.xaml
@@ -1,5 +1,5 @@
 ﻿    
-    <Controls:MetroWindow x:Class="SavegameAutoBackupAgent.MainWindow"
+    <Controls:MetroWindow x:Class="SaveScumAgent.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"  
         Title="Material Design in XAML" Height="480" Width="640"
