Start of GUI layout
Making this using Android design patterns so far. Makes sense since it's
MatDes

--- a/SavegameAutoBackupAgent/MainWindow.xaml
+++ b/SavegameAutoBackupAgent/MainWindow.xaml
@@ -1,14 +1,17 @@
-﻿<Controls:MetroWindow x:Class="SaveScumAgent.MainWindow"
+﻿<Controls:MetroWindow
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      Title="Material Design in XAML" Height="480" Width="640"
                       xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="SaveScumAgent.MainWindow"
+                      xmlns:fa="http://schemas.fontawesome.io/icons/"
+                      Title="Material Design in XAML" Height="480" Width="621.853"
                       TextElement.Foreground="{DynamicResource MaterialDesignBody}"
                       Background="{DynamicResource MaterialDesignPaper}"
                       FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto">
 
 
-    <Window.Resources>
+    <Controls:MetroWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary
@@ -25,6 +28,26 @@
                     Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.TextBox.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-    </Window.Resources>
-    <Grid />
+    </Controls:MetroWindow.Resources>
+    <Grid >
+        <StackPanel Margin="10" Orientation="Horizontal">
+            <DockPanel Width="100" LastChildFill="True">
+                <StackPanel d:LayoutOverrides="LeftPosition, RightPosition, TopPosition, BottomPosition" DockPanel.Dock="Bottom" Margin="8" >
+                    <Button x:Name="BtnNewGame" Style="{StaticResource MaterialDesignFloatingActionButton}" HorizontalAlignment="Left" AllowDrop="True" Click="BtnNewGame_Click">
+                        <Canvas Width="24" Height="24">
+                            <Path Data="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" Fill="White" />
+                        </Canvas>
+                    </Button>
+                </StackPanel>
+                <ListView x:Name="GamesListView" d:LayoutOverrides="TopPosition, BottomPosition"  DockPanel.Dock="Top" >
+                    <ListView.BindingGroup>
+                        <BindingGroup/>
+                    </ListView.BindingGroup>
+                </ListView>
+            </DockPanel>
+            <StackPanel>
+                <DataGrid x:Name="dataGrid"/>
+            </StackPanel>
+        </StackPanel>
+    </Grid>
 </Controls:MetroWindow>
